# estudo-wxwidgets

./: NOTA-mudando-versao.md  README.md
01-exemplo/: makefile.xml  makefile.yaml  run.sh  yaml_to_xml.py
advanced/01-ex/: Makefile  Project1.pjd  Project1.pjd.bak  form1.cpp  form1.h  project1app.cpp  project1app.h
advanced/02-ex/: Makefile  Project1.pjd  Project1.pjd.bak  autogen.sh  frame1.cpp  frame1.h  project1app.cpp  project1app.h  ui.xrc
advanced/Acme/: Acme.pjd  acme.cpp  acme.h
advanced/wxBaiduNetdiskGui/: .gitignore  Makefile  mylistctrl.cpp  mylistctrl.h  wxBaiduNetDisk.cbp  wxBaiduNetDiskApp.cpp  wxBaiduNetDiskApp.h  wxBaiduNetDiskMain.cpp  wxBaiduNetDiskMain.h
advanced/wxGrabber/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  count_lines.py
advanced/wx_drawing_tutorial/: CMakeLists.txt
advanced/wx_transforms_tutorial/: CMakeLists.txt
alegro/: new.sh
alegro/01-ex/: Makefile  frame.cpp
alegro/02-ex/: app.cpp  frame.cpp
alegro/03-ex/: Makefile
alegro/04-ex/: frame.cpp
alegro/05-ex/: frame1.h
alegro/07-ex/: main.cpp
alegro/08-ex/: Makefile  app.cpp  frame.cpp  frame.h  sdl_panel.cpp  sdl_panel.h
alegro/09-ex/: CMakeLists.txt  main.cpp
alegro/11-ex/: CMakeLists.txt  main.cpp
alegro/14-ex/: CMakeLists.txt  README.md
alegro/14-ex/core/: IRenderBackend.hpp  RenderModel.hpp
alegro/14-ex/render/: AllegroBackend.cpp  AllegroBackend.hpp
alegro/14-ex/ui/: App.cpp  AppFrame.hpp  RenderView.hpp
alegro/16-ex/: .gitignore
alegro/18-ex/: a  bridge.puml  seq.puml
allegro/01-ex/: app.cpp
allegro/02-ex/: frame.cpp  frame.h
allegro/03-ex/: app.h  frame.h
allegro/04-ex/: Makefile  app.cpp  frame.cpp  frame.h  resources.xrc
allegro/05-ex/: app.cpp  app.h  frame1.cpp  frame2.cpp  frame2.h  resources.xrc
allegro/06-ex/: Makefile
allegro/07-ex/: Makefile  main.cpp
allegro/08-ex/: app.cpp  app.h  frame.cpp  sdl_panel.cpp  sdl_panel.h
allegro/09-ex/: build.sh
allegro/10-ex/: CMakeLists.txt  main.cpp
allegro/11-ex/: main.cpp
allegro/12-ex/: main.cpp
allegro/13-ex/: main.cpp
allegro/14-ex/: .clang-format  CMakeLists.txt  README.md
allegro/16-ex/: CMakeLists.txt
allegro/16-ex/core/: RenderModel.hpp
allegro/18-ex/: automake.sh  seq.puml
allegro/19-ex/: UML  create_deb.sh
allegro/20-ex/: .gitignore  build.md
allegro/20-ex-bug/: CMakeLists.txt
allegro/21-ex/: CMakeLists.txt  build.sh
allegro/21-ex-bug/: CMakeLists.txt  build.sh
allegro/21-ex-bug/src/: main.cpp
allegro/21-ex/src/: PaintPanel.hpp  main.cpp
allegro/plano_cartesiano-01/: main.c
allegro/plano_cartesiano-02/: README.md  main  main.c
allegro/plano_cartesiano-03/: compile  main.c
allegro/plano_cartesiano-04/: main.c
allegro/plano_cartesiano-05/: Makefile  main.c
android/01-ex/: .yabs  Makefile  main.cpp
android/02-ex/: COMPILE  main.xrc
android/03-ex/: Makefile  NOTA.md  main.cpp  main.xrc
apt-manager/01-ex/: .bakefile_gen.state  .clang-format  .env  .gitignore  .yabs  app-manager.bkl  app-manager.cpp  hello.bkl  hello.cpp
apt-manager/01-separando_classes/: .env  .yabs  app-manager.bkl
apt-manager/02-separando_classes/: .clang-format  .yabs  Bakefiles.bkgen  README.md  app-manager.bkl
apt-manager/03-ex/: USAGE
apt-manager/04-ex-mingw/: hello.cpp
apt-manager/05-ex/: Makefile  app.cpp
apt-manager/06-ex/: Makefile  app.cpp  frame.cpp
basic/01-ex/: Bakefiles.bkgen  autogen.sh  hello.bkl  run.sh
basic/01-ex-linux-cmake-wx-3.2.4/: autogen.sh
basic/02-ex/: Makefile  USAGE
basic/03-ex/: Makefile
basic/04-ex-mingw/: Makefile
basic/04-ex-mingw-cmake/: CMakeLists.txt  README.md  USAGE  hello.cpp
basic/07-ex/hello/: CMakeLists.txt  CMakeLists.txt.in
basic/08-ex-cmake/hello/test/: CMakeLists.txt  CMakeLists.txt.in
basic/08-ex/hello/: CMakeLists.txt  CMakeLists.txt.in
basic/08-ex/hello/src/: app.cpp
basic/10-ex-cmake/: CMakeLists.txt
basic/11-ex-cmake/: CMakeLists.txt
basic/12-ex-cmake/: CMakeLists.txt
basic/13-ex-cmake/: CMakeLists.txt  main.cpp
basic/19-ex-cmake/: CMakeLists.txt  compila  generate_balls_advanced.sh  generate_balls_realistic.sh  main.cpp
basic/19-ex-cmake/cmake/: GenerateBalls.cmake
basic/wx_transforms_tutorial/src/: CMakeLists.txt
build-tools/win/exemplo-mingw/: CMakeLists.txt  build.sh  clean.sh  main.cpp  run.sh
build-tools/win/exemplo/exemplo-mingw/exemplo-01/: CMakeLists.txt  clean.sh
build-tools/win/exemplo/exemplo-mingw/exemplo-04/: CMakeLists.txt  build.sh  build_installer.bat  minimal.rc  minimal_installer.iss  run.cmake
build-tools/win/exemplo/hello_allegro_dll/: CMakeLists.txt  CMakeLists.txt.1  bash-here.ahk  clean.sh  git-here.ahk  run.cmake
clipboard/: Bakefiles.bkgen  CMakeLists.txt  clipboard.bkl
console/: datetime.cpp  dir.cpp  length.cpp
cube/: cube.bkl
dialogs/: Bakefiles.bkgen  CMakeLists.txt  dialogs.bkl
drawing/: Bakefiles.bkgen  CMakeLists.txt  drawing.bkl
exec/: Bakefiles.bkgen  CMakeLists.txt  exec.bkl
hello/: CMakeLists.txt
hooks/: post-checkout
image/: Bakefiles.bkgen  CMakeLists.txt  horse.xpm  image.bkl
image_viewer/: Bakefiles.bkgen  CMakeLists.txt  ESTRUTURA.txt  Makefile  build.txt  image.bkl  image_viewer.bkl
image_viewer_xrc/: .yabs  CMakeLists.txt  Makefile
image_viewer_xrc-v2/: Makefile  image_viewer.bkl
isosurf/: Bakefiles.bkgen  isosurf.cpp
kk/: GNUmakefile  hello.bkl  hello.sln  hello.vcxproj  hello.vcxproj.filters
menu/: Bakefiles.bkgen  CMakeLists.txt  menu.bkl
minimal/: Bakefiles.bkgen  CMakeLists.txt  minimal.bkl
opengl/: Bakefiles.bkgen  UPDATE.md  autogen.sh
opengl/penguin/: CMakeLists.txt  penguin.bkl
penguin/: Bakefiles.bkgen  autogen.sh  penguin.cpp
sound/: Bakefiles.bkgen  CMakeLists.txt  sound.bkl
splash/: Bakefiles.bkgen  CMakeLists.txt  splash.bkl
wx_app_config_tutorial/: .yabs  CMakeLists.txt
wx_app_config_tutorial/src/: app.cpp  app.h  main_frame.cpp  main_frame.h
xrc/: Bakefiles.bkgen  CMakeLists.txt  xrcdemo.bkl
xrc/09-ex-cmake/: .gitignore  CMakeLists.txt  USAGE
xrc/09-ex-cmake/src/: main.cpp  main_frame.cpp  ui.xrc
xrc/10-ex-cmake/: CMakeLists.txt
(+266 files in other folders)
